--- a/estilos/style.css
+++ b/estilos/style.css
@@ -39,3 +39,31 @@ iframe#tela {
     width: 267px;
     height: 471px;
 }
+
+p#compatibilidade {
+    color: white;
+    position: relative;
+    top: 268px;
+    left: 30px;
+    width: 250px;
+
+}
+
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.452);
+    box-sizing: border-box;
+}
+
+section#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.700);
+    transform: translate(0px, -4px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.274);
+    transition: transform 0.5s, border 0.1s;
+}
